{
  "screenNames": {
    "Finance": "Finance",
    "Profile": "Profile",
    "AddFinanceInfo": "AddFinanceInfo",
    "Login": "Login",
    "Register": "Register"      
  },
  "common":{
    "retry":"Retry",
    "genericErrorMessage":"Something went wrong, please try again later.",
     "yes" : "Yes",
    "no" : "No",
    "edit": "Edit"
  },
  "financeScreen": {
    "letsStart": "Let's start",
    "totalNetWorth": "Total net worth",
    "expectedPension": "Expected private monthly pension",
    "simulateFuture": "Use the slider to simulate future*",
    "withoutInflation": "without inflation",
    "withdrawalPeriod": "assuming a {{value}}-year withdrawal period",
    "montlyNetIncome": "Monthly net income",
    "montlyNetExpense": "Monthly net expense",
    "monthlyLiabilityPayments": "Monthly liability payments",
    "monthlyAssetPayments": "Monthly asset payments",
    "assets": "Assets",
    "liabilities": "Liabilities",
    "inCurrentPrices": "({{value}} with inflation)",
    "now": "Now",
    "yearsFromNowOnOneYear": "{{value}} year from now",
    "yearsFromNowOnLessThanFive": "{{value}} years from now",
    "yearsFromNowOn": "{{value}} years from now",
    "profitNotice":"*Past performance is no guarantee of future results."
  },
  "profileScreen": {
    "termsOfUse": "Terms of Use",
    "privacyPolicy": "Privacy Policy",
    "giveFeedback": "Give feedback",
    "logout": "Logout",
    "changeLanguage": "Change language",
    "chooseLanguage": "Choose language",
    "english": "English",
    "slovak": "Slovenčina"
  },

  "addFinanceInfoScreen": {
    "next": "Next",
    "dateOfBirthTitle": "What is your date of birth?",
    "dateOfBirthDescription": "(We need this information for calculating your expected pension.)",
    "sexTitle": "What is your sex",
    "sexDescription": "(We need this information for estimating your life expectancy.)",
    "female" : "Female",
    "male" : "Male",
    "preferNotToSay": "Prefer not to say",
    "incomeTitle": "What is your monthly net income?",
    "incomeDescription": "(Please include all income forms like salary, bonuses, rental income, dividends, royalties etc.)",
    "incomeFieldError": "Expected positive number.",
    "liabilityNameFieldError": "Please provide a name for this liability.",
    "currencyTitle": "What currency should we use?",
    "expenseTitle": "What are your monthly expenses?",
    "expenseDescription": "(Please include all expense type like housing rent, food & groceries, transportation, health & insurance, investments, education, shopping, travel & leisure etc.. Please exclude loan payments. They will be added later.)",
    "averageIncomeGrowthRateTitle": "What is your expected annual income growth rate?",
    "assetTitleETF": "How much money do you currently have invested in ETFs?",
    "assetTitleGold": "How much money do you currently have invested in gold?",
    "assetTitleCash": "How much money do you currently have in cash or checking bank account?",
    "assetTitleShares": "How much money do you currently have invested in shares?",
    "assetTitleCar": "What is the estimated market value of the car(s) you own?",
    "assetTitleBankSavings": "How much money do you currently have in savings bank account?",
    "assetTitleCrypto": "How much money do you currently have invested in Bitcoin/Ethereum?",
    "assetTitleRealEstate": "How much money do you currently have invested in real estate?",
    "assetTitleRealBonds": "How much money do you currently have invested in government bonds?",   
    "keepInPensionDescription": "Do you plan to sell this asset to help fund your pension?",
    "regularPaymentDescription": "Monthly contribution to this asset:",
    "liabilitiesTitle": "What loans do you currently have?",
    "interestRateLabel": "Interest rate (%)",
    "remainingBalanceLabel": "Remaining loan balance",
    "loanEndDateLabel": "Loan end date",
    "addLoanButtonLabel": "Add loan",
    "loanNameLabel": "Loan name",
    "loanNameDescription": "Please name this loan"
  },
  "loginScreen": {
    "email": "Email",
    "emailFieldError": "Invalid email.",
    "password": "Password",
    "confirmPassword": "Confirm password",
    "passwordFieldError": "Password has to be at least 8 characters long.",
    "confirmPasswordFieldError": "Passwords don't match.",
    "login": "Login",
    "errorMessage": "Invalid credentials.",
    "loginDemo": "Try it with a demo account",
    "or": "or",
    "dontHaveAccount": "Don’t have an account?",
    "alreadyHaveAccount": "Already have an account?",
    "createAccount": "Create Account",
    "footer1": "By Logging in, you agree to the ",
    "footer1register": "By Registering, you agree to the ",
    "footer2": "Terms of Use",
    "footer3": " and ",
    "footer4": "Privacy Policy"
  },
  "errorMessages":{
    "firestorePermissionDenied":"You do not have permission for this action."
  }
}
