...
          </AppText>
        )}
        {login.isPending && <LoadingSpinner />}
        <AppButton
          disabled={login.isPending}
          label={t('login')}
          testID="login-button"
          onPress={handleSubmit(onLogin)}
        />
        <AppText style={styles.centeredText} color="light" size="body2">
          {t('or')}
        </AppText>

...
